--- a/ala/readings.html
+++ b/ala/readings.html
@@ -61,14 +61,19 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 8th week (4/9/21): Clustering and matrix examples.</p>
 </li>
-<li><p>By the end of 9th week (4/16/21): Linear equations and linear dynamical systems.
+<li><p>By the end of 9th week (4/16/21): Linear equations and linear dynamical systems.</p>
+</li>
+<li><p>By the end of 10th week (4/23/21): Matrix multiplication and matrix inverses.</p>
+</li>
+<li><p>By the end of 11th week (4/30/21): Least squares, least squares data fitting, and least squares classification.
+
 
 </p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-11 06:54:25 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-04-25 07:28:41 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
