--- a/papers/ABCD.html
+++ b/papers/ABCD.html
@@ -46,9 +46,11 @@ This is a post-peer-review, pre-copyedit version of an article published in the 
 Showcased in the demonstration session of IEEE International Conference on Blockchain and Cryptocurrency (ICBC 2021)</p>
 </li>
 <li><p><a href="https://github.com/incentivus/ABCD" target=&ldquo;blank&rdquo;><tt>Reference implementation</tt></a><br />
-Inspired by the recent boom in <i>decentralized finance</i> (DeFi) and the unprecedented success of flash loan projects in this ecosystem, we introduce a decentralized debt derivative named <i>atomic bonded cross-chain debt</i> (ABCD) to bridge the gap between the growth of lending protocols on Ethereum and other UTXO-based blockchains specifically Bitcoin. We think of ABCD as the alphabet of interoperability for DeFi and as a credit infrastructure which unlike the current protocols is not limited by requiring either smart contracts, over-collateralization, or instantaneous payback.</p>
+Inspired by the recent boom in <i>decentralized finance</i> (DeFi) and the unprecedented success of flash loan projects in this ecosystem, we introduce a decentralized debt derivative named <i>atomic bonded cross-chain debt</i> (ABCD) to bridge the gap between the growth of lending protocols on Ethereum and other UTXO-based blockchains specifically Bitcoin. We think of ABCD as the alphabet of interoperability for DeFi and as a credit infrastructure which unlike the current protocols is not limited by requiring either smart contracts, over-collateralization, or instantaneous payback.
+</p>
 </li>
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VmTVdMyMVSY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </td>
 </tr>
 </table>
