updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -65,7 +65,10 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 10th week (4/23/21): Matrix multiplication and matrix inverses.</p>
 </li>
-<li><p>By the end of 11th week (4/30/21): Least squares, least squares data fitting, and least squares classification.
+<li><p>By the end of 11th week (4/30/21): Least squares and least squares data fitting.</p>
+</li>
+<li><p>By the end of 12th week (5/7/21): Least squares classification and multi-objective least squares.
+
 
 
 </p>
@@ -73,7 +76,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-04-25 07:34:49 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-02 03:10:29 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
