updated the website

--- a/papers/ABCD.html
+++ b/papers/ABCD.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 <ul>
-<li><p><a href="https://atomicbond.finance/" target=&ldquo;blank&rdquo;>ABCD</a>
+<li><p><a href="https://atomicbond.finance/" target=&ldquo;blank&rdquo;>ABCD</a><br />
 Inspired by the recent boom in <i>decentralized finance</i> (DeFi) and the unprecedented success of flash loan projects in this ecosystem, we introduce a decentralized debt derivative named <i>atomic bonded cross-chain debt</i> (ABCD) to bridge the gap between the growth of lending protocols on Ethereum and other UTXO-based blockchains specifically Bitcoin. We think of ABCD as the alphabet of interoperability for DeFi and as a credit infrastructure which unlike the current protocols is not limited by requiring either smart contracts, over-collateralization, or instantaneous payback.</p>
 </li>
 <li><p>Featured in the <a href="https://www.primafelicitas.com/dydx-exploring-approaches-to-building-liquidity-on-dexs/" target=&ldquo;blank&rdquo;>Primafelicitas</a> blog post</p>
