updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -67,7 +67,10 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 11th week (4/30/21): Least squares and least squares data fitting.</p>
 </li>
-<li><p>By the end of 12th week (5/7/21): Least squares classification and multi-objective least squares.
+<li><p>By the end of 12th week (5/7/21): Least squares classification.</p>
+</li>
+<li><p>By the end of 13th week (5/14/21): Multi-objective least squares.
+
 
 
 
@@ -76,7 +79,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-02 03:13:11 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-05 18:16:23 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
