updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -65,11 +65,15 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 10th week (4/23/21): Matrix multiplication and matrix inverses.</p>
 </li>
-<li><p>By the end of 11th week (4/30/21): Least squares and least squares data fitting.</p>
+<li><p>By the end of 11th week (4/30/21): Least squares.</p>
 </li>
-<li><p>By the end of 12th week (5/7/21): Least squares classification.</p>
+<li><p>By the end of 12th week (5/7/21): Least squares data fitting.</p>
 </li>
-<li><p>By the end of 13th week (5/14/21): Multi-objective least squares.
+<li><p>By the end of 13th week (5/14/21): Least squares classification.</p>
+</li>
+<li><p>By the end of 14th week (5/21/21): Multi-objective least squares.</p>
+</li>
+<li><p>By the end of 15th week (5/28/21): Constrained least squares.
 
 
 
@@ -79,7 +83,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-05 18:18:30 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-21 09:04:16 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
