updated the website

--- a/ala/home.html
+++ b/ala/home.html
@@ -41,7 +41,7 @@ MathJax.Hub.Config({
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I</p>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I</p>
 </div></div>
 <h2>Instructor</h2>
 <p><a href="../index.html">Mojtaba Tefagh</a>, <a href="https://goo.gl/maps/yihSW6s2ZYRQ73Vu9">Math 205</a>,
@@ -108,7 +108,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-21 09:04:16 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-30 21:15:29 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
