--- a/ala/readings.html
+++ b/ala/readings.html
@@ -73,7 +73,13 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 14th week (5/21/21): Multi-objective least squares.</p>
 </li>
-<li><p>By the end of 15th week (5/28/21): Constrained least squares.
+<li><p>By the end of 15th week (5/28/21): Constrained least squares.</p>
+</li>
+<li><p>By the end of 16th week (6/4/21): Constrained least squares applications.</p>
+</li>
+<li><p>By the end of 17th week (6/11/21): Nonlinear least squares and constrained nonlinear least squares.
+
+
 
 
 
@@ -83,7 +89,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-21 09:04:16 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-30 21:15:30 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
