updated the website

--- a/ala/readings.html
+++ b/ala/readings.html
@@ -40,7 +40,7 @@ MathJax.Hub.Config({
 <div id="subtitle"><a href="http://math.sharif.edu/">Department of Mathematical Sciences</a>,&nbsp;<a href="http://www.sharif.ir/">Sharif University of Technology</a><br /></div>
 </div>
 <table class="imgtable"><tr><td>
-<img src="drawing_book.png" alt="Drawing of books" width="100px" />&nbsp;</td>
+<img src="https://web.stanford.edu/~boyd/vmls/vmls_cover.jpg" alt="Reference textbook" width="100px" />&nbsp;</td>
 <td align="left"><p>Unless otherwise noted, all reading assignments are from the 
 <a href="https://web.stanford.edu/~boyd/vmls/" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
 </td></tr></table>
@@ -77,7 +77,9 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 16th week (6/4/21): Constrained least squares applications.</p>
 </li>
-<li><p>By the end of 17th week (6/11/21): Nonlinear least squares and constrained nonlinear least squares.
+<li><p>By the end of 17th week (6/11/21): Nonlinear least squares.</p>
+</li>
+<li><p>By the end of 18th week (6/18/21): Constrained nonlinear least squares.
 
 
 
@@ -89,7 +91,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-30 21:15:30 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-06-26 18:56:14 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
