--- a/ala/home.html
+++ b/ala/home.html
@@ -46,7 +46,21 @@ MathJax.Hub.Config({
 <h2>Instructor</h2>
 <p><a href="../index.html">Mojtaba Tefagh</a>, <a href="https://goo.gl/maps/yihSW6s2ZYRQ73Vu9">Math 205</a>,
 <a href="mailto:mtefagh@sharif.edu" target=&ldquo;blank&rdquo;>mtefagh@sharif.edu</a>.
+
+<b>Teaching assistants</b></p>
+<ul>
+<li><p>Aida Afshar</p>
+</li>
+<li><p>Kiana Asgari</p>
+</li>
+<li><p>Mobina Azimi</p>
+</li>
+<li><p>Mohammad Rashid</p>
+</li>
+<li><p>Nahid Sarem Sangari
 </p>
+</li>
+</ul>
 <h2>Catalog description</h2>
 <p>Introduction to applied linear algebra with a focus on applications. Vectors, distance, and angle; applications to clustering (the k-means algorithm) and document analysis. Matrices, left and right inverses, QR factorization; applications to population and epidemic dynamics. Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Additional applications include but are not limited to time-series prediction, tomography, optimal control, and portfolio optimization.
 </p>
@@ -73,12 +87,25 @@ You will use the relatively new <a href="https://julialang.org/" target=&ldquo;b
 <li><p><i>Final exam</i>.  The format is an in-class, 120-minute exam, scheduled for Sunday July 4th 9:00 am.</p>
 </li></ol>
 </li>
-<li><p><b>Grading:</b> Homework 35%, theory quiz 20%, applied quiz 20%, final exam 25%. These weights are approximate; we reserve the right to change them later.
-</p>
+<li><p><b>Grading:</b> Homework 35%, theory quiz 20%, applied quiz 20%, final exam 25%. These weights (\(\tilde{x}\)) are approximate; we reserve the right to change them later.<br /></p>
+<ol>
+<li><p><i>Update</i>. The final weights are the solution of the following linear program</p>
 </li>
 </ol>
+
+</li>
+</ol>
+<p style="text-align:center">
+\[
+\begin{array}{ll} 
+	\mbox{maximize} &amp; c^Tx + c_{ExtraCreditProject} + \alpha(1-a)\\ 
+	\mbox{subject to} &amp; 1^Tx = 1^T\tilde{x} \\ &amp; \dfrac{1}{a} \leq 	\dfrac{x_i}{\tilde{x}_i} \leq a, \quad 1\leq i\leq 4
+\end{array}
+\]
+</p><p>where \(c_1\), \(c_2\), \(c_3\), and \(c_4\) are the normalized homework, theory quiz, applied quiz, and final exam grades, respectively.
+</p>
 <h2>Homework grace period</h2>
-<p>You are given 7 &ldquo;grace days&rdquo; (counted in 24-hour periods) if you need extra time because of a <b>serious problem</b>, use them wisely! The cutoff for on-time submission is 11:59:00 pm on the due date, and submitting at 11:59:01 pm is the same as 11:59:00 pm the next day. Late submissions will not be accepted after the hard deadline of 48 hours past the original due date.
+<p>You are given 9 &ldquo;grace days&rdquo; (counted in 24-hour periods) if you need extra time because of a <b>serious problem</b>, use them wisely! The cutoff for on-time submission is 11:59:00 pm on the due date, and submitting at 11:59:01 pm is the same as 11:59:00 pm the next day. Late submissions will not be accepted after the hard deadline of 48 hours past the original due date.
 </p>
 <h2>Quera</h2>
 <p>Please use the course's <a href="https://quera.ir/course/7511/" target=&ldquo;blank&rdquo;>Quera forum</a> to ask (and answer) questions about the course materials; there will be some extra credit for high quality contribution. The enrollment code for Quera is ALA (sign up at <a href="https://quera.ir/overview/add_to_course/course/7511" target=&ldquo;blank&rdquo;>this link</a>).
@@ -86,29 +113,10 @@ You will use the relatively new <a href="https://julialang.org/" target=&ldquo;b
 <h2>Lectures</h2>
 <p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
 
-Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available in CW, hence you can watch the lectures asynchronously.
-</p>
-<h2>Office hours</h2>
-<p><b>Mojtaba Tefagh's office hours:</b> Sundays and Tuesdays, 10:00&ndash;11:00 am, via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
-
-<b>TA office hours:</b>
-The TAs will offer informal working sessions via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>, that will
-also serve as their office hours, starting the second week of class. Attendance is not required.</p>
-<ul>
-<li><p>Aida Afshar: TBD</p>
-</li>
-<li><p>Kiana Asgari: TBD</p>
-</li>
-<li><p>Mobina Azimi: TBD</p>
-</li>
-<li><p>Mohammad Rashid: TBD</p>
-</li>
-<li><p>Nahid Sarem Sangari: TBD</p>
-</li>
-</ul>
+Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available on <a href="https://cw.sharif.edu/" target=&ldquo;blank&rdquo;>CW</a>, hence you can watch the lectures asynchronously</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-30 21:15:29 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-06-26 18:56:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
