--- a/ala/home.html
+++ b/ala/home.html
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
 </div></div>
 <h2>Instructor</h2>
 <p><a href="../index.html">Mojtaba Tefagh</a>, <a href="https://goo.gl/maps/yihSW6s2ZYRQ73Vu9">Math 205</a>,
-<a href="mailto:mtefagh@sharif.edu" target=&ldquo;blank&rdquo;>mtefagh@sharif.edu</a>.
+<a href="mailto:mtefagh@sharif.edu" target=&ldquo;blank&rdquo;>mtefagh@sharif.edu</a>.<br />
 
 <b>Teaching assistants</b></p>
 <ul>
@@ -99,7 +99,7 @@ You will use the relatively new <a href="https://julialang.org/" target=&ldquo;b
 \[
 \begin{array}{ll} 
 	\mbox{maximize} &amp; c^Tx + c_{ExtraCreditProject} + \alpha(1-a)\\ 
-	\mbox{subject to} &amp; 1^Tx = 1^T\tilde{x} \\ &amp; \dfrac{1}{a} \leq 	\dfrac{x_i}{\tilde{x}_i} \leq a, \quad 1\leq i\leq 4
+	\mbox{subject to} &amp; 1^Tx = 1^T\tilde{x} \\ &amp; \dfrac{1}{a} \leq 	\dfrac{x_i}{\tilde{x}_i} \leq a, \quad 1\leq i\leq 4,
 \end{array}
 \]
 </p><p>where \(c_1\), \(c_2\), \(c_3\), and \(c_4\) are the normalized homework, theory quiz, applied quiz, and final exam grades, respectively.
@@ -116,7 +116,7 @@ You will use the relatively new <a href="https://julialang.org/" target=&ldquo;b
 Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available on <a href="https://cw.sharif.edu/" target=&ldquo;blank&rdquo;>CW</a>, hence you can watch the lectures asynchronously</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-26 18:56:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-06-26 19:04:54 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
