--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -105,7 +105,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </p><p>Note that the coefficient \(2-a\) will never be negative, as we have:</p>
 <p style="text-align:center">
 \[
-a \leq 0.3\big(\prod_{i=1}^3 x_i\big)^{\frac{1}{3}} \leq 0.3 \big(\dfrac{\sum_{i=1}^3 x_i}{3}\big) \leq 0.3 \big(\dfrac{\sum_{i=1}^3 \tilde{x}_i}{3}\big) = \leq 0.3 \big(\frac{20}{3}\big) = 2
+a \leq 0.3\big(\prod_{i=1}^3 x_i\big)^{\frac{1}{3}} \leq 0.3 \big(\dfrac{\sum_{i=1}^3 x_i}{3}\big) = 0.3 \big(\dfrac{\sum_{i=1}^3 \tilde{x}_i}{3}\big) = 0.3 \big(\frac{20}{3}\big) = 2
 \]
 </p><p></p>
 <h2>Prerequisites</h2>
@@ -143,7 +143,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-26 18:56:06 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-06-26 19:04:48 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
