updated the website

--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -89,7 +89,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </li>
 <li><p><b>Grading:</b> Homework 20%, midterm 10%, final exam 70%. These weights are approximate; we reserve the right to change them later.<br /></p>
 <ol>
-<li><p><i>Update</i>. The final weights are the solution of the following linear program</p>
+<li><p><i>Update</i>. The final weights are the solution of the <a href="./grades.m" target=&ldquo;blank&rdquo;>following</a> linear program</p>
 </li>
 </ol>
 
@@ -143,7 +143,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-26 19:04:48 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-06-26 20:07:23 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
