updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -34,13 +34,30 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
+<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811" target=&ldquo;blank&rdquo;><b>22811</b> Foundations of Computer and Programming</a></h3>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus I<br /></p>
+<table class="imgtable"><tr><td>
+<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Computational thinking, algorithms, data representation, data types, programming code, branching and iteration, recursion and bisection, string manipulation, tuples and lists, arrays and dictionaries, mutability and immutable data structures, functions and methods, classes and objects, abstraction and interfaces, encapsulation, inheritance, polymorphism, overloading and overriding, testing and debugging, exceptions and assertions, object-oriented programming.</p>
+</td></tr></table>
+<p>This course covers the fundamentals of computer programming with an emphasis on computational thinking, understanding algorithms, and the basic concepts of programming languages to build a solid background as it is the prerequisite for most of the CS curriculum.
+</p>
+<h3><a href="https://wiki.ce.sharif.edu/%D8%AF%D8%B1%D8%B3/%DB%B4%DB%B0%DB%B5%DB%B5%DB%B1" target=&ldquo;blank&rdquo;><b>40551</b> Computational Systems Biology</a></h3>
+<p>Term: Fall 2021 | Units: 3 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Some programming experience and familiarity with biology.<br /></p>
+<table class="imgtable"><tr><td>
+<a href="./bio/home.html"><img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
+</td></tr></table>
+<p>This course was formerly known as <a href="./bio/home.html" target=&ldquo;blank&rdquo;><b>22290</b> Topics in Mathematical Biology</a>, and was taught 2020-21. Some of the material from that class is expanded and used here. 
+</p>
+<h2>Previous classes</h2>
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255" target=&ldquo;blank&rdquo;><b>22255</b> Linear Algebra I</a></h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: 6/23/21 9:00am | Prerequisite: Calculus II<br /></p>
 <table class="imgtable"><tr><td>
 <a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="https://linear.axler.net/LADRcover.png" alt="Linear algebra done right" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
 </td></tr></table>
-<p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the curriculum.
+<p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the Math curriculum.
 </p>
 <h3><a href="./ala/home.html" target=&ldquo;blank&rdquo;><b>22659</b> Applied Linear Algebra</a></h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
@@ -50,11 +67,10 @@ MathJax.Hub.Config({
 </td></tr></table>
 <p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
 </p>
-<h2>Previous classes</h2>
 <h3><a href="./bio/home.html" target=&ldquo;blank&rdquo;><b>22290</b> Topics in Mathematical Biology</a></h3>
 <p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
 <table class="imgtable"><tr><td>
-<a href="./bio/home.html"><img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" /></a>&nbsp;</td>
+<a href="./bio/home.html"><img src="./bio/metnet_logo.png" alt="A metabolic network" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
 </td></tr></table>
 <p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
