--- a/ala/home.html
+++ b/ala/home.html
@@ -113,10 +113,10 @@ You will use the relatively new <a href="https://julialang.org/" target=&ldquo;b
 <h2>Lectures</h2>
 <p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
 
-Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available on <a href="https://cw.sharif.edu/" target=&ldquo;blank&rdquo;>CW</a>, hence you can watch the lectures asynchronously</p>
+Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available on <a href="https://cw.sharif.edu/course/view.php?id=6002" target=&ldquo;blank&rdquo;>CW</a>, hence you can watch the lectures asynchronously.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-01 21:41:21 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-01 22:03:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
