--- a/teaching.html
+++ b/teaching.html
@@ -35,10 +35,10 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811" target=&ldquo;blank&rdquo;><b>22811</b> Foundations of Computer and Programming</a></h3>
-<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus I<br /></p>
+<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus I<br /></p>
 <table class="imgtable"><tr><td>
 <a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
-<td align="left"><p>Computational thinking, algorithms, data representation, data types, programming code, branching and iteration, recursion and bisection, string manipulation, tuples and lists, arrays and dictionaries, mutability and immutable data structures, functions and methods, classes and objects, abstraction and interfaces, encapsulation, inheritance, polymorphism, overloading and overriding, testing and debugging, exceptions and assertions, object-oriented programming.</p>
+<td align="left"><p>Computational thinking and programming code, data representation and data types, branching and iteration, recursion and bisection, string manipulation, tuples and lists, arrays and dictionaries, variables and immutable data structures, functions and methods, classes and objects, abstraction and interfaces, encapsulation and object-oriented programming, inheritance and polymorphism, overloading and overriding, testing and debugging, exceptions and assertions.</p>
 </td></tr></table>
 <p>This course covers the fundamentals of computer programming with an emphasis on computational thinking, understanding algorithms, and the basic concepts of programming languages to build a solid background as it is the prerequisite for most of the CS curriculum.
 </p>
@@ -51,14 +51,6 @@ MathJax.Hub.Config({
 <p>This course was formerly known as <a href="./bio/home.html" target=&ldquo;blank&rdquo;><b>22290</b> Topics in Mathematical Biology</a>, and was taught 2020-21. Some of the material from that class is expanded and used here. 
 </p>
 <h2>Previous classes</h2>
-<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255" target=&ldquo;blank&rdquo;><b>22255</b> Linear Algebra I</a></h3>
-<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: 6/23/21 9:00am | Prerequisite: Calculus II<br /></p>
-<table class="imgtable"><tr><td>
-<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="https://linear.axler.net/LADRcover.png" alt="Linear algebra done right" width="250px" /></a>&nbsp;</td>
-<td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
-</td></tr></table>
-<p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the Math curriculum.
-</p>
 <h3><a href="./ala/home.html" target=&ldquo;blank&rdquo;><b>22659</b> Applied Linear Algebra</a></h3>
 <p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 7/4/21 9:00am | Prerequisite: Linear Algebra I<br /></p>
 <table class="imgtable"><tr><td>
@@ -66,6 +58,14 @@ MathJax.Hub.Config({
 <td align="left"><p>Introduction to applied linear algebra with a focus on applications. Vectors, distance, and angle; applications to clustering (the k-means algorithm) and document analysis. Matrices, left and right inverses, QR factorization; applications to population and epidemic dynamics. Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Additional applications include but are not limited to time-series prediction, tomography, optimal control, and portfolio optimization.</p>
 </td></tr></table>
 <p>This course is originally developed by <a href="http://stanford.edu/~boyd/" target=&ldquo;blank&rdquo;>Stephen P. Boyd</a>. The course materials are the same as <a href="https://web.stanford.edu/class/engr108/">ENGR108</a> at Stanford. Specifically, the textbook and lecture slides can be found <a href="https://web.stanford.edu/~boyd/vmls/">here</a>.
+</p>
+<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255" target=&ldquo;blank&rdquo;><b>22255</b> Linear Algebra I</a></h3>
+<p>Term: Spring 2021 | Units: 4 | Section: 01 | Students enrolled: 40 | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: 6/23/21 9:00am | Prerequisite: Calculus II<br /></p>
+<table class="imgtable"><tr><td>
+<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="https://linear.axler.net/LADRcover.png" alt="Linear algebra done right" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Vector space, linear independence, dimension, duality, linear mappings, matrices, nonsingular matrices, kernel, determinant, trace, spectral theory, eigenvalues, eigenvectors, eigendecomposition, conjugacy, Cayley-Hamilton theorem, inner product space, orthonormal basis, euclidean structure, self-adjoint mappings, Hermitian matrices, unitary matrices, orthogonal matrices, diagonalizable matrices, semi-definite matrices, matrix inequalities, convexity, normed linear spaces, positive matrices, systems of linear equations, matrix decomposition, the Jordan canonical form.</p>
+</td></tr></table>
+<p>This course covers the fundamentals of linear algebra with emphasis on the concepts and analytical aspects to build a solid background as it is the prerequisite for most of the Math curriculum.
 </p>
 <h3><a href="./bio/home.html" target=&ldquo;blank&rdquo;><b>22290</b> Topics in Mathematical Biology</a></h3>
 <p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization<br /></p>
