--- a/teaching.html
+++ b/teaching.html
@@ -37,7 +37,7 @@ MathJax.Hub.Config({
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811" target=&ldquo;blank&rdquo;><b>22811</b> Foundations of Computer and Programming</a></h3>
 <p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus I<br /></p>
 <table class="imgtable"><tr><td>
-<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22255"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
+<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Computational thinking and programming code, data representation and data types, branching and iteration, recursion and bisection, string manipulation, tuples and lists, arrays and dictionaries, variables and immutable data structures, functions and methods, classes and objects, abstraction and interfaces, encapsulation and object-oriented programming, inheritance and polymorphism, overloading and overriding, testing and debugging, exceptions and assertions.</p>
 </td></tr></table>
 <p>This course covers the fundamentals of computer programming with an emphasis on computational thinking, understanding algorithms, and the basic concepts of programming languages to build a solid background as it is the prerequisite for most of the CS curriculum.
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
 <h3><a href="https://wiki.ce.sharif.edu/%D8%AF%D8%B1%D8%B3/%DB%B4%DB%B0%DB%B5%DB%B5%DB%B1" target=&ldquo;blank&rdquo;><b>40551</b> Computational Systems Biology</a></h3>
 <p>Term: Fall 2021 | Units: 3 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Some programming experience and familiarity with biology.<br /></p>
 <table class="imgtable"><tr><td>
-<a href="./bio/home.html"><img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" /></a>&nbsp;</td>
+<a href="https://wiki.ce.sharif.edu/%D8%AF%D8%B1%D8%B3/%DB%B4%DB%B0%DB%B5%DB%B5%DB%B1"><img src="word_art.png" alt="Word cloud of COBRA keywords" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.</p>
 </td></tr></table>
 <p>This course was formerly known as <a href="./bio/home.html" target=&ldquo;blank&rdquo;><b>22290</b> Topics in Mathematical Biology</a>, and was taught 2020-21. Some of the material from that class is expanded and used here. 
