updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -34,10 +34,10 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Current classes</h2>
-<h3><a href="https://wiki.ce.sharif.edu/%D8%AF%D8%B1%D8%B3/%DB%B4%DB%B0%DB%B5%DB%B5%DB%B1" target=&ldquo;blank&rdquo;><b>xxxxx</b> Algorithmic Game Theory</a></h3>
+<h3><a href="./game/home.html" target=&ldquo;blank&rdquo;><b>xxxxx</b> Algorithmic Game Theory</a></h3>
 <p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Some optimization experience and familiarity with economics.<br /></p>
 <table class="imgtable"><tr><td>
-<a href="https://wiki.ce.sharif.edu/%D8%AF%D8%B1%D8%B3/%DB%B4%DB%B0%DB%B5%DB%B5%DB%B1"><img src="Incentivus.png" alt="Project Incentivus" width="250px" /></a>&nbsp;</td>
+<a href="./game/home.html"><img src="./game/Incentivus.png" alt="Project Incentivus" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance.</p>
 </td></tr></table>
 <p>This is the alpha version of a course on the ongoing research and open problems in algorithmic game theory. Many advanced topics and cutting-edge issues in the field are discussed, which require mathematical maturity at the level of Ph.D. courses. There is no official textbook for the course.
