updated the website

--- a/game/home.html
+++ b/game/home.html
@@ -24,9 +24,6 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="home.html" class="current">Home</a></div>
 <div class="menu-category">External links</div>
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
-<div class="menu-item"><a href="https://github.com/incentivus">GitHub</a></div>
-<div class="menu-item"><a href="https://quera.ir/course/6014/">Quera</a></div>
-<div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
 <div class="menu-item"><a href="../cvx/home.html" class="current">22494&nbsp;Convex&nbsp;Optimization</a></div>
 <div class="menu-item"><a href="http://www.cs.columbia.edu/~tr/s20/s20.html">Incentives&nbsp;in&nbsp;Computer&nbsp;Science</a></div>
 </td>
@@ -45,12 +42,12 @@ MathJax.Hub.Config({
 
 <b>Teaching assistants</b></p>
 <ul>
-<li><p>Faeze Nasir</p>
+<li><p>Faeze Nasiri</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-02 16:34:32 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-02 16:44:02 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
