updated the website

--- a/game/home.html
+++ b/game/home.html
@@ -42,12 +42,15 @@ MathJax.Hub.Config({
 
 <b>Teaching assistants</b></p>
 <ul>
-<li><p>Faeze Nasiri</p>
+<li><p>Faeze Nasiri
+</p>
 </li>
 </ul>
+<h2>Catalog description</h2>
+<p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance (DeFi). This course focuses on both the systemic risks at the protocol level ranging from miner extractable value (MEV) to transaction fee price manipulation and the economic exploits on the incentive layer like malicious flash loan transactions and the horrors of the dark forest. Through a wide variety of examples of issues stemming from incentive misalignment, we will see the emergence of adversarial attacks by self-interested rational agents who behave strategically to optimize their own objectives and values.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-02 16:44:02 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-03 16:23:18 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
