--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@ MathJax.Hub.Config({
 <p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Some optimization experience and familiarity with economics.<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./game/home.html"><img src="./game/Incentivus.png" alt="Project Incentivus" width="250px" /></a>&nbsp;</td>
-<td align="left"><p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance.</p>
+<td align="left"><p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance (DeFi). This course focuses on both the systemic risks at the protocol level ranging from miner extractable value (MEV) to transaction fee price manipulation and the economic exploits on the incentive layer like malicious flash loan transactions and the horrors of the dark forest. Through a wide variety of examples of issues stemming from incentive misalignment, we will see the emergence of adversarial attacks by self-interested rational agents who behave strategically to optimize their own objectives and values. </p>
 </td></tr></table>
 <p>This is the alpha version of a course on the ongoing research and open problems in algorithmic game theory. Many advanced topics and cutting-edge issues in the field are discussed, which require mathematical maturity at the level of Ph.D. courses. There is no official textbook for the course.
 </p>
