--- a/game/home.html
+++ b/game/home.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD  | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Some optimization experience and familiarity with economics.</p>
+<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD  | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: TBD | Prerequisite: Some optimization experience and familiarity with economics.</p>
 </div></div>
 <h2>Instructor</h2>
 <p><a href="../index.html">Mojtaba Tefagh</a>, <a href="https://goo.gl/maps/yihSW6s2ZYRQ73Vu9">Math 205</a>,
@@ -42,15 +42,52 @@ MathJax.Hub.Config({
 
 <b>Teaching assistants</b></p>
 <ul>
+<li><p>Fateme Alimirzaei</p>
+</li>
+<li><p>Mona Mohammadi</p>
+</li>
 <li><p>Faeze Nasiri
 </p>
 </li>
 </ul>
 <h2>Catalog description</h2>
-<p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance (DeFi). This course focuses on both the systemic risks at the protocol level ranging from miner extractable value (MEV) to transaction fee price manipulation and the economic exploits on the incentive layer like malicious flash loan transactions and the horrors of the dark forest. Through a wide variety of examples of issues stemming from incentive misalignment, we will see the emergence of adversarial attacks by self-interested rational agents who behave strategically to optimize their own objectives and values.</p>
+<p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance (DeFi). This course focuses on both the systemic risks at the protocol level ranging from miner extractable value (MEV) to transaction fee price manipulation and the economic exploits on the incentive layer like malicious flash loan transactions and the horrors of the dark forest. Through a wide variety of examples of issues stemming from incentive misalignment, we will see the emergence of adversarial attacks by self-interested rational agents who behave strategically to optimize their own objectives and values.
+</p>
+<h2>Prerequisites</h2>
+<p>Exposure to economics/finance and good knowledge of mathematical optimization (as in <a href="../cvx/home.html" target=&ldquo;blank&rdquo;><b>22494</b> Convex Optimization</a> or equivalent background) is a prerequisite or corequisite.<br />
+
+Many advanced topics and cutting-edge issues in the field are discussed, which require mathematical maturity at the level of Ph.D. courses.
+</p>
+<h2>Textbook and optional references</h2>
+<p>This is the alpha version of a course on the ongoing research and open problems in algorithmic game theory. There is no official textbook for the course.
+</p>
+<h2>Course requirements and grading</h2>
+<ol>
+<li><p><b>Requirements:</b></p>
+<ol>
+<li><p><i>Attendance and participation at sections</i>.</p>
+</li></ol>
+</li>
+<li><p><b> Project deliverables:</b></p>
+<ol>
+<li><p><i> Initial proposal</i>. title + team members (max size of 3 students) + 1-page description of concept and methods (excluding references) </p>
+</li>
+<li><p><i>Milestone report</i>. early draft of at most 3 pages (including annexes and figures) + next steps and intended experiments + contributions of each team member</p>
+</li>
+<li><p><i>Final writeup</i>. report (maximum 5 pages long) + link to the GitHub repository + contributions of each team member</p>
+</li>
+<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for Sunday July 4th 9:00 am.</p>
+</li></ol>
+</li>
+<li><p><b>Grading:</b> Final exam 40%, project 60%. These weights are approximate; we reserve the right to change them later.
+</p>
+</li>
+</ol>
+<h2>Lectures</h2>
+<p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-03 16:23:18 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-17 12:53:14 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
