--- a/teaching.html
+++ b/teaching.html
@@ -35,7 +35,7 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <h3><a href="./game/home.html" target=&ldquo;blank&rdquo;><b>xxxxx</b> Algorithmic Game Theory</a></h3>
-<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Some optimization experience and familiarity with economics.<br /></p>
+<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: TBD | Prerequisite: Some optimization experience and familiarity with economics.<br /></p>
 <table class="imgtable"><tr><td>
 <a href="./game/home.html"><img src="./game/Incentivus.png" alt="Project Incentivus" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Frontiers in mechanism design and incentive engineering for cryptoeconomic systems such as decentralized finance (DeFi). This course focuses on both the systemic risks at the protocol level ranging from miner extractable value (MEV) to transaction fee price manipulation and the economic exploits on the incentive layer like malicious flash loan transactions and the horrors of the dark forest. Through a wide variety of examples of issues stemming from incentive misalignment, we will see the emergence of adversarial attacks by self-interested rational agents who behave strategically to optimize their own objectives and values. </p>
@@ -43,7 +43,7 @@ MathJax.Hub.Config({
 <p>This is the alpha version of a course on the ongoing research and open problems in algorithmic game theory. Many advanced topics and cutting-edge issues in the field are discussed, which require mathematical maturity at the level of Ph.D. courses. There is no official textbook for the course.
 </p>
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811" target=&ldquo;blank&rdquo;><b>22811</b> Foundations of Computer and Programming</a></h3>
-<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: TBD | Exam Date/Time: TBD | Prerequisite: Calculus I<br /></p>
+<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 8:00&ndash;10:00am | Exam Date/Time: TBD | Prerequisite: Calculus I<br /></p>
 <table class="imgtable"><tr><td>
 <a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Computational thinking and programming code, data representation and data types, branching and iteration, recursion and bisection, string manipulation, tuples and lists, arrays and dictionaries, variables and immutable data structures, functions and methods, classes and objects, abstraction and interfaces, encapsulation and object-oriented programming, inheritance and polymorphism, overloading and overriding, testing and debugging, exceptions and assertions.</p>
