updated the website

--- a/game/home.html
+++ b/game/home.html
@@ -66,7 +66,8 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 <li><p><b>Requirements:</b></p>
 <ol>
 <li><p><i>Attendance and participation at sections</i>.</p>
-</li></ol>
+</li>
+<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for TBA.</p>
 </li>
 <li><p><b> Project deliverables:</b></p>
 <ol>
@@ -75,8 +76,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 <li><p><i>Milestone report</i>. early draft of at most 3 pages (including annexes and figures) + next steps and intended experiments + contributions of each team member</p>
 </li>
 <li><p><i>Final writeup</i>. report (maximum 5 pages long) + link to the GitHub repository + contributions of each team member</p>
-</li>
-<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for Sunday July 4th 9:00 am.</p>
+</li></ol>
 </li></ol>
 </li>
 <li><p><b>Grading:</b> Final exam 40%, project 60%. These weights are approximate; we reserve the right to change them later.
@@ -87,7 +87,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 <p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-17 12:53:14 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-17 12:59:23 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
