updated the website

--- a/game/home.html
+++ b/game/home.html
@@ -69,7 +69,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 </li>
 <li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for TBA.</p>
 </li>
-<li><p><b> Project deliverables:</b></p>
+<li><p><i>Project</i>. The project deliverables are as follows:</p>
 <ol>
 <li><p><i> Initial proposal</i>. title + team members (max size of 3 students) + 1-page description of concept and methods (excluding references) </p>
 </li>
@@ -87,7 +87,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 <p>Lectures are Sundays and Tuesdays, 8:00&ndash;10:00 am, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-17 12:59:23 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-17 13:01:50 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
