updated the website

--- a/game/home.html
+++ b/game/home.html
@@ -35,7 +35,7 @@ MathJax.Hub.Config({
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: TBD  | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: TBD | Prerequisite: Some optimization experience and familiarity with economics.</p>
+<p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: 10  | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 1/15/22 3:00pm | Prerequisite: Some optimization experience and familiarity with economics.</p>
 </div></div>
 <h2>Instructor</h2>
 <p><a href="../index.html">Mojtaba Tefagh</a>, <a href="https://goo.gl/maps/yihSW6s2ZYRQ73Vu9">Math 205</a>,
@@ -100,7 +100,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-25 10:52:45 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-02 16:53:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
