updated the website

--- a/game/home.html
+++ b/game/home.html
@@ -68,7 +68,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 <ol>
 <li><p><i>Attendance and participation at sections</i>.</p>
 </li>
-<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for TBA.</p>
+<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for 1/15/22 3:00&ndash;5:00pm.</p>
 </li>
 <li><p><i>Project</i>. The project deliverables are as follows:</p>
 <ol>
@@ -100,7 +100,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-02 16:53:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-02 16:59:43 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
