--- a/game/home.html
+++ b/game/home.html
@@ -24,8 +24,11 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="home.html" class="current">Home</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-category">External links</div>
+<div class="menu-item"><a href="https://cw.sharif.edu/course/view.php?id=7586">CW</a></div>
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
 <div class="menu-item"><a href="../cvx/home.html" class="current">22494&nbsp;Convex&nbsp;Optimization</a></div>
+<div class="menu-item"><a href="http://game-theory-class.org/">Game&nbsp;Theory</a></div>
+<div class="menu-item"><a href="https://defi-learning.org/">Decentralized&nbsp;Finance</a></div>
 <div class="menu-item"><a href="http://www.cs.columbia.edu/~tr/s20/s20.html">Incentives&nbsp;in&nbsp;Computer&nbsp;Science</a></div>
 </td>
 <td id="layout-content">
@@ -68,7 +71,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 <ol>
 <li><p><i>Attendance and participation at sections</i>.</p>
 </li>
-<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for 1/15/22 3:00&ndash;5:00pm.</p>
+<li><p><i>Final exam</i>.  The format is a closed-book closed-notes 120-minute exam, scheduled for Saturday, January 15.</p>
 </li>
 <li><p><i>Project</i>. The project deliverables are as follows:</p>
 <ol>
@@ -100,7 +103,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-02 16:59:43 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-18 20:26:24 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
