--- a/game/projects.html
+++ b/game/projects.html
@@ -24,8 +24,11 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="home.html">Home</a></div>
 <div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-category">External links</div>
+<div class="menu-item"><a href="https://cw.sharif.edu/course/view.php?id=7586">CW</a></div>
 <div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
 <div class="menu-item"><a href="../cvx/home.html">22494&nbsp;Convex&nbsp;Optimization</a></div>
+<div class="menu-item"><a href="http://game-theory-class.org/">Game&nbsp;Theory</a></div>
+<div class="menu-item"><a href="https://defi-learning.org/">Decentralized&nbsp;Finance</a></div>
 <div class="menu-item"><a href="http://www.cs.columbia.edu/~tr/s20/s20.html">Incentives&nbsp;in&nbsp;Computer&nbsp;Science</a></div>
 </td>
 <td id="layout-content">
@@ -39,7 +42,7 @@ MathJax.Hub.Config({
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-02 16:59:44 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-18 20:26:25 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
